app/dashboard/layout.module.scss
@use '../../styles/variables' as *;

.dashboard {
  display: flex;
  min-height: 100vh;
  background: $bg;
}

.mainContent {
  flex: 1;
  margin-left: 240px;
  min-width: 0;
  display: flex;
  flex-direction: column;
  min-height: 100vh;

  @media (max-width: 1024px) {
    margin-left: 200px;
  }

  @media (max-width: 768px) {
    margin-left: 0;
  }
}

.content {
  padding: 2rem;
  flex: 1;
  margin-top: 72px;
  overflow-x: hidden;
  max-width: 100%;

  @media (max-width: 768px) {
    padding: .5rem;
  }
}

